--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+    compile 'com.github.nitrico.lastadapter:lastadapter:2.2.2'
+
 }
 repositories {
     mavenCentral()
