--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
     dataBinding {
         enabled true
     }
+    repositories{
+        maven { url "https://jitpack.io" }
+    }
 }
 
 dependencies {
@@ -37,6 +40,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.github.nitrico.lastadapter:lastadapter:2.2.2'
+    compile 'com.github.IntruderShanky:scatter-piechart:1.0.0'
 
 }
 repositories {
