--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.github.nitrico.lastadapter:lastadapter:2.2.2'
     compile 'com.github.IntruderShanky:scatter-piechart:1.0.0'
+    compile 'com.naver.maps.open:naver-map-api:2.1.2@aar'
 
 }
 repositories {
