--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,18 +4,17 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".AppController"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -30,7 +29,9 @@
         <activity android:name=".NearFoodMapActivity" />
         <activity android:name=".UserSettingsActivity" />
         <activity android:name=".FoodStackActivity" />
-        <activity android:name=".FoodStackSearchActivity"></activity>
+        <activity android:name=".FoodStackSearchActivity" />
+        <activity android:name=".HistoryActivity" />
+        <activity android:name=".HistoryItemActivity"></activity>
     </application>
 
 </manifest>
